redid melanie and larissa's profiles and added in 2 team photos to the carousel. noticed that they affected the width and was causing an overflow on the x axis. removed the width in slide.desktop and made some of the mobile css different as well. i want to push and make sure it doesn't cause issues live, because I remember last time possible having some issues bc there was a discrepancy between going live and the local host version of the website

--- a/src/CustomCarousel.css
+++ b/src/CustomCarousel.css
@@ -3,7 +3,7 @@
 
 .slide.desktop {
   height: 51vh;
-  width: 8vw;
+  /* width: 8vw; */
   display: flex;
   justify-content: space-between;
 }
@@ -105,6 +105,17 @@
     height: 40vh;
     width: 100% !important;
   }
+
+  .slide.desktop {
+    height: 30vh;
+    width: 100% !important;
+    /* width: 4vw; */
+  }
+
+  .slideImage {
+    object-fit: cover;
+  }
+
   .slideImage.mobile {
     object-fit: contain;
   }
