--- a/src/index2.css
+++ b/src/index2.css
@@ -355,6 +355,9 @@ main {
 .memberPic {
   display: flex;
   flex: 2;
+  /* border: 2px solid red; */
+  justify-content: center;
+  align-items: center;
 }
 
 .memberPic img {
@@ -1219,7 +1222,9 @@ main {
   .teamMember {
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    text-align: center;
+    row-gap: 15px;
   }
 
   .listContainer.row {
